# SolidStateLeipzig

./: LICENSE  genindex.html  markdown-notebooks.html  notebooks.html  pyproject.toml
content/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
content/_build/html/: .buildinfo  intro.html  markdown.html  search.html  searchindex.js
content/_build/jupyter_execute/: markdown-notebooks.ipynb
